# upk-python

./: README.md  pyproject.toml
upk/: __main__.py  androidManifestDecompress.py  apk.py  apkpure.py  utils.py
